<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">RemindMe</string>
	<string name="label_main_button_create_note">Create Note!</string>
	<string name="label_tillt_button_manage_service_off">start Reminder!</string>
	<string name="label_tillt_button_manage_service_on">stop Reminder!</string>
	<string name="label_main_button_manager_reminder">Manage Reminder!</string>
	<string name="label_create_note_text">What to remind: </string>
	<string name="label_create_note_text_finish_at">When does it will happens?</string>
	<string name="label_create_note_text_frequency">Which frequency we\'ll remind you?</string>
	<string name="label_create_note_menu_opt_minute">Minutes</string>
	<string name="label_create_note_menu_opt_minute_1">1 minute</string>
	<string name="label_create_note_menu_opt_minute_2">2 minutes</string>
	<string name="label_create_note_menu_opt_minute_5">5 minutes</string>
	<string name="label_create_note_menu_opt_minute_10">10 minutes</string>
	<string name="label_create_note_menu_opt_minute_15">15 minutes</string>
	<string name="label_create_note_menu_opt_minute_20">20 minutes</string>
	<string name="label_create_note_menu_opt_minute_30">30 minutes</string>
	<string name="label_create_note_menu_opt_minute_45">45 minutes</string>
	<string name="label_create_note_menu_opt_hour">Hours</string>
	<string name="label_create_note_menu_opt_hour_1">1 hour</string>
	<string name="label_create_note_menu_opt_hour_2">2 hours</string>
	<string name="label_create_note_menu_opt_hour_3">3 hours</string>
	<string name="label_create_note_menu_opt_hour_4">4 hours</string>
	<string name="label_create_note_menu_opt_hour_5">5 hours</string>
	<string name="label_create_note_menu_opt_hour_6">6 hours</string>
	<string name="label_create_note_menu_opt_hour_10">10 hours</string>
	<string name="label_create_note_menu_opt_hour_12">12 hours</string>
	<string name="label_create_note_menu_opt_day">Days</string>
	<string name="label_create_note_menu_opt_day_1">1 day</string>
	<string name="label_create_note_menu_opt_day_2">2 days</string>
	<string name="label_create_note_menu_opt_day_3">3 days</string>
	<string name="label_create_note_menu_opt_day_4">4 days</string>
	<string name="label_create_note_menu_opt_day_5">5 days</string>
	<string name="label_create_note_menu_opt_day_6">6 days</string>
	<string name="label_create_note_menu_opt_week">Weeks</string>
	<string name="label_create_note_menu_opt_week_1">1 week</string>
	<string name="label_create_note_menu_opt_week_2">2 weeks</string>
	<string name="label_create_note_menu_opt_week_3">3 weeks</string>
	<string name="label_create_note_menu_opt_month">Months</string>
	<string name="label_create_note_menu_opt_month_1">1 month</string>
	<string name="label_create_note_menu_opt_month_2">2 months</string>
	<string name="label_create_note_menu_opt_month_3">3 months</string>
	<string name="label_create_note_menu_opt_month_4">4 months</string>
	<string name="label_create_note_menu_opt_month_5">5 months</string>
	<string name="label_create_note_menu_opt_month_6">6 months</string>
</resources>
