<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item android:id="@+id/create_note_menu_opt_minute" android:title="@string/label_create_note_menu_opt_minute">
		<menu>
			<item android:id="@+id/create_note_menu_opt_minute_1"
				android:title="@string/label_create_note_menu_opt_minute_1" />
			<item android:id="@+id/create_note_menu_opt_minute_2"
				android:title="@string/label_create_note_menu_opt_minute_2"></item>
			<item android:id="@+id/create_note_menu_opt_minute_5"
				android:title="@string/label_create_note_menu_opt_minute_5"></item>
			<item android:id="@+id/create_note_menu_opt_minute_10"
				android:title="@string/label_create_note_menu_opt_minute_10"></item>
			<item android:id="@+id/create_note_menu_opt_minute_15"
				android:title="@string/label_create_note_menu_opt_minute_15"></item>
			<item android:id="@+id/create_note_menu_opt_minute_20"
				android:title="@string/label_create_note_menu_opt_minute_20"></item>
			<item android:id="@+id/create_note_menu_opt_minute_30"
				android:title="@string/label_create_note_menu_opt_minute_30"></item>
			<item android:id="@+id/create_note_menu_opt_minute_45"
				android:title="@string/label_create_note_menu_opt_minute_45"></item>
		</menu>
	</item>
	<item android:id="@+id/create_note_menu_opt_hour" android:title="@string/label_create_note_menu_opt_hour">
		<menu>
			<item android:id="@+id/create_note_menu_opt_hour_1"
				android:title="@string/label_create_note_menu_opt_hour_1" />
			<item android:id="@+id/create_note_menu_opt_hour_2"
				android:title="@string/label_create_note_menu_opt_hour_2" />
			<item android:id="@+id/create_note_menu_opt_hour_3"
				android:title="@string/label_create_note_menu_opt_hour_3" />
			<item android:id="@+id/create_note_menu_opt_hour_4"
				android:title="@string/label_create_note_menu_opt_hour_4" />
			<item android:id="@+id/create_note_menu_opt_hour_5"
				android:title="@string/label_create_note_menu_opt_hour_5" />
			<item android:id="@+id/create_note_menu_opt_hour_6"
				android:title="@string/label_create_note_menu_opt_hour_6" />
			<item android:id="@+id/create_note_menu_opt_hour_10"
				android:title="@string/label_create_note_menu_opt_hour_10" />
			<item android:id="@+id/create_note_menu_opt_hour_12"
				android:title="@string/label_create_note_menu_opt_hour_12" />
		</menu>
	</item>
	<item android:id="@+id/create_note_menu_opt_day" android:title="@string/label_create_note_menu_opt_day">
		<menu>
			<item android:id="@+id/create_note_menu_opt_day_1"
				android:title="@string/label_create_note_menu_opt_day_1" />
			<item android:id="@+id/create_note_menu_opt_day_2"
				android:title="@string/label_create_note_menu_opt_day_2" />
			<item android:id="@+id/create_note_menu_opt_day_3"
				android:title="@string/label_create_note_menu_opt_day_3" />
			<item android:id="@+id/create_note_menu_opt_day_4"
				android:title="@string/label_create_note_menu_opt_day_4" />
			<item android:id="@+id/create_note_menu_opt_day_5"
				android:title="@string/label_create_note_menu_opt_day_5" />
			<item android:id="@+id/create_note_menu_opt_day_6"
				android:title="@string/label_create_note_menu_opt_day_6" />
		</menu>
	</item>
	<item android:id="@+id/create_note_menu_opt_week" android:title="@string/label_create_note_menu_opt_week">
		<menu>
			<item android:id="@+id/create_note_menu_opt_week_1"
				android:title="@string/label_create_note_menu_opt_week_1" />
			<item android:id="@+id/create_note_menu_opt_week_2"
				android:title="@string/label_create_note_menu_opt_week_2" />
			<item android:id="@+id/create_note_menu_opt_week_3"
				android:title="@string/label_create_note_menu_opt_week_3" />
		</menu>
	</item>
	<item android:id="@+id/create_note_menu_opt_month" android:title="@string/label_create_note_menu_opt_month">
		<menu>
			<item android:id="@+id/create_note_menu_opt_month_1"
				android:title="@string/label_create_note_menu_opt_month_1" />
			<item android:id="@+id/create_note_menu_opt_month_2"
				android:title="@string/label_create_note_menu_opt_month_2" />
			<item android:id="@+id/create_note_menu_opt_month_3"
				android:title="@string/label_create_note_menu_opt_month_3" />
			<item android:id="@+id/create_note_menu_opt_month_4"
				android:title="@string/label_create_note_menu_opt_month_4" />
			<item android:id="@+id/create_note_menu_opt_month_5"
				android:title="@string/label_create_note_menu_opt_month_5" />
			<item android:id="@+id/create_note_menu_opt_month_6"
				android:title="@string/label_create_note_menu_opt_month_6" />
		</menu>
	</item>
</menu>
