<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="wrap_content"
	android:layout_height="wrap_content" android:gravity="center">
	<LinearLayout android:id="@+id/linearLayout2"
		android:layout_height="match_parent" android:layout_width="wrap_content"
		android:gravity="center">
		<TextView android:layout_height="wrap_content" android:id="@+id/create_note_text_note"
			android:layout_width="wrap_content" android:text="@string/label_create_note_text"></TextView>
	</LinearLayout>
	<LinearLayout android:id="@+id/linearLayout1"
		android:layout_height="match_parent" android:layout_width="wrap_content">
		<EditText android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:id="@+id/editText1"
			android:layout_weight="1" android:inputType="textMultiLine">
			<requestFocus></requestFocus>
		</EditText>
		<EditText android:layout_height="wrap_content" android:width="500sp"
			android:height="100sp" android:text="" android:id="@+id/create_note_textfield_note"
			android:layout_width="match_parent"></EditText>
	</LinearLayout>
	<TextView android:layout_height="wrap_content"
		android:layout_width="wrap_content" android:id="@+id/create_note_text_finish_at"
		android:text="@string/label_create_note_text_finish_at"></TextView>
	<EditText android:layout_height="wrap_content" android:text=""
		android:layout_width="match_parent" android:id="@+id/create_note_textfield_finish_at"></EditText>
	<TextView android:id="@+id/create_note_text_frequency"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:text="@string/label_create_note_text_frequency"></TextView>
	<EditText android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/create_note_textfield_frequency"></EditText>
</LinearLayout>